# lille

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  COPYING  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  constants.schema.json  constants.toml  dylint.toml  typos.toml
.cargo/: config.toml
.codescene/: code-health-rules.json
.github/: actionlint.yaml
.github/actions/install-ddlog/: action.yml
.github/actions/setup-ddlog/: action.yml
.github/workflows/: ci.yml  coverage-main.yml  coverage.yml
artifacts/bevy-0-17-upgrade/phase-0/: cargo-tree-bevy.txt
artifacts/bevy-0-17-upgrade/phase-1/: cargo-tree-bevy.txt
artifacts/bevy-0-17-upgrade/phase-2/: cargo-tree-bevy.txt
assets/maps/: primary-isometric-custom-properties.tmx  primary-isometric.tmx
build_support/: Cargo.toml
build_support/src/: constants.rs  ddlog.rs  font.rs  lib.rs
build_support/tests/: constants.rs
docs/: README.md  adr-001-dbsp-observers-v1-spike.md  adr-002-ordered-float-v5-vendored-feldera-size-of-fork.md  architecture.md  bdd-strategies-for-differential-datalog-rulesets.md  behavioural-testing-in-rust-with-cucumber.md  behavioural-testing-in-rust-with-rspec.md  bevy-0-16-plus-migration-plan.md  bevy-headless-testing.md  complexity-antipatterns-and-refactoring-strategies.md  ddlog-migration-roadmap.md  ddlog-world-inference.md  declarative-world-inference-with-dbsp-and-rust.md  developers-guide.md  differential-datalog-with-rust.md  documentation-style-guide.md  lille-isometric-tiled-maps-design.md  lille-map-and-presentation-roadmap.md  lille-physics-and-world-engine-roadmap.md  lille-physics-engine-design.md  lille-physics-engine-roadmap.md  lille-presentational-layer.md  map-data-format.md  rust-testing-with-rstest-fixtures.md  shared-constants-for-ddlog-and-rust-via-toml-codegen.md  test_utils.md  testing-declarative-game-logic-in-dbsp.md  testing-differential-datalog-rulesets.md
docs/execplans/: pres-task-1-1-2-load-primary-isometric-map-asset.md  pres-task-1-1-2-register-custom-map-data-property-types.md  pres-task-1-1-3-register-custom-map-data-property-types.md  pres-task-1-2-1-translate-map-data-into-engine-state.md  pres-task-1-2-4-support-slope-metadata-for-terrain.md  pres-task-1-3-1-define-player-spawn-and-spawn-point-components.md  pres-task-1-3-2-spawn-player-and-actors-on-map-readiness.md  pres-task-1-3-3-enforce-single-active-map-lifecycle.md  pres-task-task-2-1-1-create-presentation-plugin-and-camera-marker.md  pres-task-task-2-1-2-camera-panning-controls.md
docs/migrations/: bevy-0-17-phase-0.md  bevy-0-17-phase-1.md  bevy-0-17-phase-2.md  bevy-0-17-phase-3.md  bevy-0-17-phase-4.md  bevy-0-17-phase-5.md  entity-world-entity.md
git/build_support/tests/: constants.rs
patches/: fix_static.patch
scripts/: build_support_runner.sh  install_ddlog.sh
src/: actor.rs  components.rs  constants.rs  dbsp_circuit.rs  dbsp_sync.rs  ddlog_handle.rs  ddlog_sync.rs  entity.rs  graphics.rs  lib.rs  lille.dl  logging.rs  macros.rs  main.rs  map.rs  numeric.rs  physics.rs  presentation.rs  spawn_world.rs  vector_math.rs  world.rs  world_handle.rs
src/dbsp_circuit/: circuit.rs  helpers.rs  mod.rs  step.rs  streams.rs  tests.rs  types.rs
src/dbsp_circuit/streams/: behaviour.rs  floor.rs  health.rs  kinematics.rs  mod.rs  test_utils.rs
src/dbsp_circuit/streams/behaviour/: apply.rs  decide.rs  fear.rs  mod.rs  tests.rs
src/dbsp_circuit/streams/floor/: mod.rs  tests.rs
src/dbsp_circuit/streams/health/: aggregate.rs  fall.rs  mod.rs  tests.rs
src/dbsp_circuit/streams/kinematics/: mod.rs  tests.rs
src/dbsp_circuit/streams/kinematics/tests/: mod.rs  motion.rs  position_floor.rs
src/dbsp_sync/: damage_inbox.rs  duplicate_filter.rs  input.rs  mod.rs  observers_v1.rs  output.rs  plugin.rs  state.rs  systems.rs  test_support.rs
src/dbsp_sync/input/: mod.rs  sync.rs
src/dbsp_sync/output/: mod.rs  tests.rs
src/dbsp_sync/output/tests/: edge_cases.rs  failure_paths.rs  mod.rs
src/ddlog/: entity_state.dl  geometry.dl  lille.dl  lille.rs  physics.dl  physics.rs  physics.toml  types.dl
src/map/: lifecycle.rs  mod.rs  spawn.rs  translate.rs
src/map/lifecycle/: mod.rs  tests.rs
stubs/lille_ddlog/: Cargo.toml  lib.rs
stubs/lille_ddlog/differential_datalog/: Cargo.toml  lib.rs
test_utils/: Cargo.toml
test_utils/src/: conversions.rs  dbsp_sync.rs  lib.rs  physics.rs
test_utils/src/physics/: mod.rs  units.rs
tests/: actor.rs  applied_acceleration.rs  bevy_dbsp_loop.rs  camera_panning_rspec.rs  common.rs  compile_pass.rs  copy_record_rspec.rs  cucumber.rs  dbsp_error_rspec.rs  dbsp_floor_height.rs  dbsp_highest_block.rs  dbsp_motion_logic.rs  dbsp_position_floor.rs  dbsp_schedule_regression.rs  dbsp_spawn_sync.rs  dbsp_spawn_sync_rspec.rs  dbsp_sync_id_map.rs  ddlog.rs  ddlog_handle.rs  ddlog_sort.rs  fear_level_not_copy_rspec.rs  generated_ddlog.rs  geometry_rspec.rs  health_pipeline.rs  health_pipeline_observers_v1_spike.rs  map_collision_block_attachment.rs  map_collision_rspec_block_attachment.rs  map_lifecycle.rs  map_lifecycle_rspec.rs  map_plugin.rs  map_plugin_invalid_path.rs  map_plugin_load_primary.rs  map_plugin_missing_map.rs  map_plugin_property_type_registry.rs  map_plugin_rspec.rs  map_plugin_rspec_custom_properties.rs  map_plugin_rspec_loads_map.rs  map_plugin_rspec_missing_map.rs  map_plugin_rspec_no_maps.rs  map_plugin_spawn_disabled.rs  (+13 more)
tests/common/: mod.rs
tests/compile_pass/: message_reader_migration.rs
tests/features/: gravity.feature
tests/physics_bdd/: dbsp_authority.rs  forces.rs  friction.rs  health.rs  heights.rs  mod.rs  support.rs
tests/snapshots/: physics_bdd__falling_delta.snap  physics_bdd__force_position.snap  physics_bdd__force_velocity.snap  physics_bdd__friction_position.snap  physics_bdd__friction_velocity.snap
tests/steps/: gravity_steps.rs  mod.rs
tests/support/: dbsp_error_capture.rs  map_error_helpers.rs  map_fixture.rs  map_test_plugins.rs  rspec_runner.rs  spawn_test_helpers.rs  thread_safe_app.rs
