[package]
name = "lille"
version = "0.1.0"
edition = "2021"
description = "A realtime strategy game"
build = "build.rs"

[dependencies]
hashbrown = "0.14"  # High performance HashMap implementation
clap = { version = "4.4", features = ["derive"] }  # Command line argument parsing
glam = { workspace = true }  # Linear algebra for games
bevy = { version = "0.12", default-features = false, features = ["bevy_asset","bevy_core_pipeline","bevy_render","bevy_sprite","bevy_text","png"] }
log = "0.4"  # Structured logging facade
env_logger = "0.10"  # Logger implementation controlled via RUST_LOG
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
anyhow = "^1"
ordered-float = { workspace = true }
size-of = { version = "0.1", package = "feldera-size-of", features = ["ordered-float"] }
rkyv = { version = "0.7", default-features = false, features = ["std", "size_64", "validation", "uuid"] }
dbsp = "0.98"

[build-dependencies]
build_support = { path = "build_support" }
color-eyre = "0.6"

[workspace]
members = ["build_support", "test_utils"]

[workspace.dependencies]
glam = "0.24"
ordered-float = { version = "3", features = ["serde", "rkyv_64"] }

[dev-dependencies]
insta = { version = "1.38.0", default-features = false, features = ["ron"] }
rstest = "0.18.0"
regex = "1"
once_cell = "1"
approx = "0.5"
ordered-float = { workspace = true }
serial_test = "3.2"
mockall = "0.13.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rspec = "1.0"
test_utils = { path = "test_utils" }

