[package]
name = "lille"
version = "0.1.0"
edition = "2021"
description = "A realtime strategy game"
build = "build.rs"

[[bin]]
name = "lille"
path = "src/main.rs"
required-features = ["render"]

[dependencies]
hashbrown = "0.14"  # High performance HashMap implementation
clap = { version = "4.4", features = ["derive"] }  # Command line argument parsing
glam = { workspace = true }  # Linear algebra for games
bevy = { version = "0.12", default-features = false }
bevy_app = "0.12"
bevy_ecs = "0.12"
bevy_hierarchy = "0.12"
bevy_math = "0.12"
bevy_reflect = { version = "0.12", features = ["bevy"] }
bevy_transform = "0.12"
bevy_log = { version = "0.12", optional = true }
log = "0.4"  # Structured logging facade
env_logger = "0.10"  # Logger implementation controlled via RUST_LOG
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
ordered-float = { workspace = true }
size-of = { version = "0.1", package = "feldera-size-of", features = ["ordered-float"] }
rkyv = { version = "0.7", default-features = false, features = ["std", "size_64", "validation", "uuid"] }
dbsp = "0.98"

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.12", default-features = false, features = ["x11"] }

[features]
default = []
render = [
    "bevy/bevy_asset",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_winit",
    "bevy_log",
]
text = ["render", "bevy/bevy_text"]

[build-dependencies]
build_support = { path = "build_support" }
anyhow = { workspace = true }

[workspace]
members = ["build_support", "test_utils"]

[workspace.dependencies]
anyhow = "1"
glam = "0.30"
ordered-float = { version = "3", features = ["serde", "rkyv_64"] }

[dev-dependencies]
insta = { version = "1.38.0", default-features = false, features = ["ron"] }
rstest = "0.18.0"
regex = "1"
once_cell = "1"
approx = "0.5"
ordered-float = { workspace = true }
serial_test = "3.2"
mockall = "0.13.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rspec = "1.0"
test_utils = { path = "test_utils" }

[profile.dev]
debug = 1  # Line numbers in stack traces
