[package]
name = "lille"
version = "0.1.0"
edition = "2021"
description = "A realtime strategy game"
build = "build.rs"

[[bin]]
name = "lille"
path = "src/main.rs"
required-features = ["render", "map"]

[dependencies]
hashbrown = "0.14"  # High performance HashMap implementation
clap = { version = "4.4", features = ["derive"] }  # Command line argument parsing
glam = { workspace = true }  # Linear algebra for games
bevy = { workspace = true, default-features = false }
bevy_app = "0.17.3"
bevy_ecs = "0.17.3"
bevy_math = "0.17.3"
bevy_reflect = { version = "0.17.3", features = ["auto_register_inventory"] }
bevy_transform = "0.17.3"
bevy_log = { version = "0.17.3", optional = true }
log = "0.4"  # Structured logging facade
env_logger = "0.10"  # Logger implementation controlled via RUST_LOG
bevy_ecs_tiled = { git = "https://github.com/adrien-bon/bevy_ecs_tiled.git", rev = "abeefe40ed7ac3bd9562c8dab59824acdd51d643", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
ordered-float = { workspace = true }
thiserror = "1"
size-of = { version = "0.1", package = "feldera-size-of", features = ["ordered-float"] }
rkyv = { version = "0.7", default-features = false, features = ["std", "size_64", "validation", "uuid"] }
dbsp = "0.98"
once_cell = "1"

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { workspace = true, default-features = false, features = ["x11"] }

[features]
default = []
render = [
    "bevy/bevy_asset",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_winit",
    "bevy/bevy_log",
]
map = ["render", "bevy_ecs_tiled"]
text = ["render", "bevy/bevy_text"]
test-support = []

[build-dependencies]
build_support = { path = "build_support" }
anyhow = { workspace = true }

[workspace]
members = ["build_support", "test_utils"]

[workspace.dependencies]
anyhow = "1"
glam = "0.30"
ordered-float = { version = "3", features = ["serde", "rkyv_64"] }
bevy = { version = "0.17.3", default-features = false, features = ["reflect_auto_register"] }

[dev-dependencies]
lille = { path = ".", features = ["test-support"] }
insta = { version = "1.38.0", default-features = false, features = ["ron"] }
rstest = "0.18.0"
regex = "1"
approx = "0.5"
ordered-float = { workspace = true }
serial_test = "3.2"
mockall = "0.13.1"
static_assertions = "^1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rspec = "1.0"
test_utils = { path = "test_utils" }

[profile.dev]
debug = 1  # Line numbers in stack traces

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
blanket_clippy_restriction_lints = "deny"
cognitive_complexity = "deny"
needless_pass_by_value = "deny"
implicit_hasher = "deny"

# 2. debugging leftovers
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# 2. panic-prone operations
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
panic_in_result_fn = "deny"
unreachable = "deny"

# 4. portability
host_endian_bytes = "deny"
little_endian_bytes = "deny"
big_endian_bytes = "deny"

# 5. nursery idiom polish
let_underscore_must_use = "deny"
or_fun_call = "deny"
option_if_let_else = "deny"
self_named_module_files = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
str_to_string = "deny"
string_lit_as_bytes = "deny"
try_err = "deny"
unneeded_field_pattern = "deny"
use_self = "deny"

# 6. API ergonomics
missing_const_for_fn = "deny"
must_use_candidate = "deny"
unused_async = "deny"

# 7. Error handling
missing_panics_doc = "deny"
error_impl_error = "deny"
result_large_err = "deny"

[lints.rust]
unknown_lints = "deny"
renamed_and_removed_lints = "deny"
missing_docs = "deny"

[lints.rustdoc]
missing_crate_level_docs = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
bare_urls = "deny"
invalid_html_tags = "deny"
invalid_codeblock_attributes = "deny"
unescaped_backticks = "deny"
