[package]
name = "build_support"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
sha2 = "0.10.9"
toml = "0.8.23"
once_cell = "1.21.3"
tempfile = "3.20.0"

[dev-dependencies]
rstest = "0.18.0"
mockall = "0.13.1"
test_utils = { path = "../test_utils" }


[[bin]]
name = "build_support_runner"
path = "src/bin/build_support_runner.rs"

