[package]
name = "build_support"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
sha2 = "0.10.9"
tempfile = "3.20.0"
anyhow = { workspace = true }

[dev-dependencies]
rstest = "0.26.1"
mockall = "0.13.1"
test_utils = { path = "../test_utils" }


[[bin]]
name = "build_support_runner"
path = "src/bin/build_support_runner.rs"

