[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
syn = { version = "2.0.103", features = ["full"] }
dbsp = "0.321"
lille = { path = ".." }
ordered-float = { workspace = true }
bevy = { workspace = true, default-features = false }

[dev-dependencies]
rstest = "0.18.0"
